TT-875 Handles user account creation response
Authors: @rachaelbooth @andy-paine
