# src/main/java/uk/gov/ida/verifyserviceprovider/dto/Scenario.java
@@ -1,0 +1,11 @@
+package uk.gov.ida.verifyserviceprovider.dto;
+
+public enum Scenario {
+    SUCCESS_MATCH,
+    ACCOUNT_CREATION,
+    NO_MATCH,
+    CANCELLATION,
+    AUTHENTICATION_FAILED,
+    REQUEST_ERROR,
+    INTERNAL_SERVER_ERROR
+}
